# SekouTaiseiMaker

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  build.sh  config.example.js  index.html  pdf-editor.js  sekou_taisei_maker-aa497a7821bcb030_bg.wasm  style.css  test-fonts.html
.claude/: settings.local.json
.claude/health-tasks/: batch.md  index.md  task-0001.md  task-0006.md  task-0007.md  task-0008.md  task-0009.md  task-0010.md  task-0011.md  task-0016.md  task-0027.md  task-0028.md  task-0037.md  task-0038.md  task-0041.md  task-0046.md  task-0047.md  task-0054.md  task-0055.md  task-0056.md  task-0063.md  task-0065.md  task-0066.md  task-0067.md  task-0068.md  (+159 more)
data/: contract_sheet.json  ocr_documents.json  sample_project.json
docs/: architecture_v2.md  fix_a_excel_file_handling.md  fix_b_url_parsing.md  fix_c_gemini_api_refactor.md  fix_d_field_type_enum.md  fix_e_env_helper.md  fix_f_gemini_constants.md  fix_g_url_parsing_robust.md  fix_index.md  how_to_use_instructions.md  implementation_plan.md  rust-font-poc.md  rust-migration-tasks.md  task_a_pdf_viewer.md  task_b_spreadsheet_handler.md  task_c_dashboard_integration.md  task_d_gemini_api.md  task_e_document_ai_ocr.md  task_f_pdf_editor.md  task_index.md  task_t1_data_structure.md  task_t2_api_client.md  task_t3_server_url.md  task_t4_viewer_actions.md  task_t5_result_panel.md  task_t6_dashboard_badge.md  task_t7_save_function.md
fonts/: create_jis_subset.py  create_subset.py  subset_chars.txt  subset_chars_full.txt  subset_chars_jis.txt
gas/: .clasp.json  ContractReader.gs  SekouTaiseiSync.gs  appsscript.json
react-app/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: check_document_dates.py  config.py  convert_pdf_to_image.py  create_ocr_data.py  docgen.py  document_ai_ocr.py  document_prompts.py  gemini_checker.py  gemini_server.py  generate-health-report.bat  generate-health-report.sh  generators.py  get_blank_field_coordinates.py  google_auth.py  health-report-server.js  list_drive_sheets.py  pdf_field_editor.py  read_contract_sheet.py  requirements.txt  run_gemini_check.py  run_ocr.py  spreadsheet_ops.py  templates.json
src/: main.rs  models.rs
tools/codebase-health/: Cargo.toml  README.md
tools/codebase-health/src/: main.rs
tools/codebase-health/src/analyzer/: complexity.rs  file_stats.rs  issues.rs  mod.rs
tools/codebase-health/src/reporter/: html.rs  json.rs  markdown.rs  mod.rs
tools/codebase-health/src/task_generator/: claude_tasks.rs  mod.rs
(+52 files in other folders)
