[package]
name = "sekou_taisei_maker"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlInputElement", "FileReader", "File", "FileList", "Blob",
    "Request", "RequestInit", "RequestMode", "Response", "Headers"
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo = "0.11"

[profile.release]
lto = true
opt-level = 'z'
