[package]
name = "sekou_taisei_maker"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlInputElement", "HtmlElement", "FileReader", "File", "FileList",
    "Blob", "BlobPropertyBag", "Url",
    "Request", "RequestInit", "RequestMode", "Response", "Headers",
    "Navigator", "Clipboard", "Location", "Storage",
    "HtmlCanvasElement", "CanvasRenderingContext2d", "HtmlImageElement",
    "MouseEvent", "DomRect"
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo = { version = "0.11", features = ["futures"] }
base64 = "0.22"

[profile.release]
lto = true
opt-level = 'z'
